--- a/localisation/KR_Shandong_l_simp_chinese.yml
+++ b/localisation/KR_Shandong_l_simp_chinese.yml
@@ -307,7 +307,7 @@
  SQI_end_Loyal_citizens:0 "政权合法化"
  SQI_join_qing_faction:0 "加入[QIE.GetFactionName]"
  SQI_join_qing_faction_desc:0 "随着五省战争的结束，我们有能力支援我们的大清盟友，让我们加入他们的联盟，向中国统一前进！"
- SQI_decisions_unlocked:0 "解锁新决议"
+ SQI_decisions_unlocked:0 "解锁£decision_icon_small 新决议"
  SQI_create_LSP:0 "创建华东诸省联合"
  SQI_create_LSP_desc:0 "六省现在将在靳大帅的麾下重组，孙传芳死了之后，靳云鹗统一并且在其麾下建立了六省联合。他现在重新组建了同盟，并以机会主义和军事统治来治理六省。"
  SQI_war_intervention_decisions:0 "干预军阀们的地盘"
@@ -374,17 +374,10 @@
  SQI_can_obtain_air:0 "§Y现在可就编练空军一事与盟友会晤§!\n"
  sqi_pat_aut_liu_heding_puppet:0 "新皖系军阀"
 
- SQI_ying_xiang:0 "在山东的博弈"
- SQI_ying_xiang_desc:0 "在二张相继去世，鲍里斯·阿年科夫和他的雇佣军们夺取山东的权力之后，柏林、东京、北京都迫切的想要这块区域加入自己的势力圈中。尤其是的北京，孙传芳的死亡与国民党的南部的动乱让他们焦头烂额，如果山东再失陷，那就意味着吴佩孚该收拾铺盖滚蛋了。德国人在青岛有着大片的租界，他们也希望山东的新主人能够多倒向他们。日本人的目的是最单纯的，他们只想要在中国拥有更多的桥头堡，来征服这片土地。\n§g在你夺取北京之前，最好平衡好日、徳、清三方的影响力（也就是民粹、市自、社保的党派支持度不要高于50%）§!"
- SQI_cong_zhi_xi_huo_qu_huo_qi:0 "从[QIE.GetNameWithFlag]获取武器"
- SQI_cong_ri_ben_huo_qu_huo_qi:0 "从[JAP.GetNameWithFlag]获取武器"
- SQI_cong_de_guo_huo_qu_huo_qi:0 "从[GER.GetNameWithFlag]获取武器"
- SQI_cong_de_guo_shu_mai_qing_dao:0 "赎买青岛"
- SQI_cong_de_guo_shu_mai_wei_hai_wei:0 "赎买威海卫"
-
  SQI_GER_yin_xiang_li:0 "德意志的阴翳之下"
  SQI_GER_yin_xiang_li_desc:0 "自从1898年胶东半岛被清政府租借给德意志之后，德国就不断的对着山东半岛露出獠牙。工业及军事实力迅猛崛起的德意志帝国，对于在开拓殖民地方面同英法列强的巨大差距极不甘心，而占领胶州之后，德国终于在继非洲和大洋洲之后，在亚洲找到了立足之地。德皇威廉二世正式命名胶澳租借地的市区为青岛（Tsingtau）。柏林方面决心投入巨资将青岛建设成所谓的§g“模范殖民地”§!。但随着第一次世界大战落下帷幕，德意志的殖民地得到广阔提升，在东亚无论是南京还是北京，甚至是广州、上海都要比这个曾经的§g“模范殖民地”§!更有价值，青岛在帝国内部逐渐变得不受宠了起来，除非他们能够更进一步...\n山东的督理[SQI.GetLeader]是个不受北京宠爱的家伙，而山东省最大的城市青岛正掌握在这些谋求得到皇帝恩宠的德国人手里。一方有钱，一方需要钱，于是这个诡异的同盟就此达成，德国人想要更进一步的控制整个山东，而[SQI.GetLeader]想要彻底摆脱北京和柏林的约束，他们如同两只饿狼，都迫不及待的想要吃掉对方。\n\n§g[GER.GetNameDefCap]§![GER.GetFlag]目前对山东的财政控制为[Getkongzhidu]"
  SQI_jin_kou_de_guo_shang_ping_mission:0 "德国商品进口"
+ SQI_de_yi_zhi_de_da_shou_mission:0 "德意志完全掌握"
  SQI_xiang_de_qi_zheng_shou:0 "对德企加征额外税款"
  SQI_xiang_de_qi_zheng_shou_desc:0 "尽管我们并没有独立关税权，无法对德国进口的商品征收一分钱，然而这不代表那些德国企业就不需要对我们缴一分钱，即便我们并不能战胜他们，但是我们有一万种方式让我们双方两败俱伤。"
  SQI_xiang_de_guo_xun_qiu_dai_kuan:0 "向德国寻求贷款"
@@ -397,6 +390,7 @@
  SQI_gu_li_guo_huo:0 "鼓励国货"
  SQI_gu_li_guo_huo_not:0 "鼓励“国货”"
  SQI_gu_li_guo_huo_not_desc:0 "山东制造，大帅精选，我的选择"
+ SQI_su_mai_qing_dao:0 "赎买青岛"
  SQI_agricultural_reform_mission_timer:0 "解决粮食危机"
  SQI_jiang_di_dian_zu:0 "耕者有其田"
  SQI_jiang_di_dian_zu_desc:0 "农民能够占到我省人口的百分之九十，耕种优质农田的大多数都是雇农、佃农或者半佃农，自耕农们只拥有那些贫瘠的土地。然而同时，省内山东大地主并不多，大部分情况下农民们也是按照资本主义的方式雇佣，时土地使用权与所有权的分散，使得拥有相当土地的地主、富农将自己无力耕种的土地或租佃或雇工经营，而农民自身不仅缺少资金、牲畜、种子及生产工具，还极易受到各种因素的影响，如婚丧、天灾等，因此不可能租种整批田地。为了解决这种情况，我们就需要让地主们全身心的投入，让农民们赎买他们耕种的土地，去实现孙中山所谓的“耕者有其田”。"
@@ -411,12 +405,35 @@
  SQI_di_guo_de_shi_wu:0 "帝国的事务"
  SQI_MON:0 "整合[MON.GetNameWithFlag]"
  SQI_TRM:0 "整合[TRM.GetNameWithFlag]"
- 
+
+ SQI_chu_li_nong_chun_wen_ti:0 "皖系的糟糕声望"
+ SQI_chu_li_nong_chun_wen_ti_desc:0 "军阀，在近来的中国民间从来不是个什么好词语，绝大多数军阀都被他们辖地的人民所唾弃。如今所有人最厌恶的自然是稳坐北京的直系军阀，但是在过去最为人所不齿的却是如今我们着手重建的旧皖系。无论是镇压五四运动、喋血北京，还是同日本人勾结不清出卖国家。皖系军阀的名声早已经烂在了地里。所以如果我们想要统一中国，想要抗衡直奉军阀，我们所需要的第一件事就是扭转皖系的民声，或者起码要将人民的怒火引向一个更适合发泄的地方。\n\n§g皖系军阀§!目前在群众间的声望[Getshengming]"
+ SQI_guo_ming_dang_chan_cun:0 "国民党残存"
+ SQI_guo_ming_dang_chan_cun_desc:0 "国民党，或者说三民主义并没有随着又一次北伐失败而被消灭，他们的影响力依旧在我们的城市与乡间存在，那些地下政客们不遗余力的诋毁着我们。"
+ SQI_shan_dong_fan_zu_jie:0 "煽动反租界情绪"
+ SQI_shan_dong_fan_zu_jie_desc:0 "要记住，做得小心一点，千万不要让德国人发现了。"
+ SQI_di_hui_zhi_xi:0 "诋毁直系"
+ SQI_di_hui_zhi_xi_desc:0 "也许我们很难在人民心目中挽回我们的名声，但是我们可以轻松诋毁我们的敌人们，尤其是吴佩孚。"
+ SQI_peng_ji_di_zhi:0 "抨击帝制"
+ SQI_xuan_yang_xian_zheng:0 "宣扬宪政"
+ SQI_yan_lun_guan_zhi:0 "言论管制"
+
+ SQI_can_up_wan: "§Y我们能够挽回我们的名声§!"
+ SQIwansmall: "§R民怨沸腾（[?SQI.SQI_wan_xi_var|0]）§!"
+ SQIwanlittle: "§R有口皆骂（[?SQI.SQI_wan_xi_var|0]）§!"
+ SQIwanbig: "§Y普普通通（[?SQI.SQI_wan_xi_var|0]）§!"
+ SQIwanmore: "§Y无毁无誉（[?SQI.SQI_wan_xi_var|0]）§!"
+ SQIwanhuge: "§G交口称誉（[?SQI.SQI_wan_xi_var|0]）§!"
+ SQIwanall: "§G有口皆碑（[?SQI.SQI_wan_xi_var|0]）§!"
+ SQI_wan_investment_small_tooltip: "§s皖系军阀的名声§!§Y增长§!§G5%§!"
+ SQI_wan_investment_medium_tooltip: "§s皖系军阀的名声§!§Y增长§!§G10%§!"
+ SQI_wan_spend_small_tooltip: "§s皖系军阀的名声§!§Y降低§!§G5%§!"
  SQIsmall: "§R低（[?SQI.SQI_gea_influence_variable|0]）§!"
  SQIlittle: "§Y低（[?SQI.SQI_gea_influence_variable|0]）§!"
  SQIbig: "§Y中（[?SQI.SQI_gea_influence_variable|0]）§!"
  SQImore: "§G高（[?SQI.SQI_gea_influence_variable|0]）§!"
  SQIhuge: "§G极高（[?SQI.SQI_gea_influence_variable|0]）§!"
+ SQIall: "§G完全掌控（[?SQI.SQI_gea_influence_variable|0]）§!"
  SQI_GER_spend_all_time_tooltip: "§c德国的控制力§!小幅§Y增长§!"
  SQI_GER_investment_small_tooltip: "§c德国的控制力§!§Y增长§!§G5%§!"
  SQI_GER_investment_medium_tooltip: "§c德国的控制力§!§Y增长§!§G10%§!"
@@ -606,6 +623,13 @@
  SQI.7.t:0 "同刘子山的合作"
  SQI.7.d:0 "刘子山是华北无数去青岛讨生活的人之一，靠着语言天赋早早学会了德语，随后在青岛混得如鱼得水，尤其是1905年，在德国人的授意下参手了山东鸦片生意，因为其他徳属鸦片商们纷纷退出，最后其垄断了山东的鸦片销售，赚了个盆满钵满，赚得多了就开始搞实业，开设大窑沟福合永窑厂、孤山窑厂、海西窑厂，收购永利号汽车行与永利号铁工厂经营汽车进口与客运。后来又搞起了银行，投资山东工商业，房地产，还落了个“刘半城”的名声。搞得那些曾经的同行们十分眼红，丁敬臣那家伙还花了几十万白银在东亚监事会上下打点希望换取自己来独家经营，最后完全没有得到人家的回应，白白花掉几十万。而在全球禁止明面上的毒品贸易后，这位大商人虽然也开始金盆洗手，但是他从来没有真正的脱离过鸦片业。我们想要掌握这一行业自然离不开他的帮助。他也会很愿意同我们合作谋求更大的利益。"
  SQI.7.a:0 "合作愉快"
+ SQI.8.t:0 "万国体育会"
+ SQI.8.d:0 "万国体育会在青岛成立于1924年，主要是美国人策划的，他们通过赛马在上海等地赚到数百万赌资于是向德国人提议在青岛也成立一个赛马场。在德国人同意后，由驻青美国商会、华人买办、东亚理事会合资出了原始资金，又广招中外会员，会员分通常会员和股本会员两种，股东会员每股收返用元50元，该会共收到2000股，计股金10万元，作为运用资会，拟建设球类实和赛马设备，会址初设在市南区浙江路2号(今改3号)二楼，后迁中山路曲阜路亚当姆斯大楼三楼(即今中山路 51号第一百货商店。)青品万国体育会股东会员虽中外人士都有，但以美国人滋美满和亚当姆斯的股份为最多，后来有些迁往他处的股东，愿将股票转让，他们两人即尽量收买，因此他们的权柄最大。\n\n青岛万国体育会营业除会员费、门票、马匹人栏费外，以马票为唯一的大宗收人，马票计分四种，即独赢票，每张售价1元或3元；马位票，每张3元；摇彩票，每张3元(最末一次每张5元)；大香槟票，春秋两季每张各5元，夏季每张10元，售票方法有当日出售的，有先一星期内预定的。预售者谓之通票，即如你定摇彩票三号，一天各次的三号摇彩票都是属你的。每年马票售出，常在300万元上下，其中80%派给彩银，20%为佣金，在佣金的数中，以二成为赛马税，交纳财政局，一成归售票经理部，七成为会中开销，开销最多的为优胜马奖金，约占开销数的一半。\n\n青岛万国体育会还开展过其它体育运动，该会经中国董事建议，在马场内附设了各种球类设施，如篮球场、网球场、足球场、排球场、乒乓球场、棒球场、高尔夫球场等并备有各项运动器具，凡中外人士有球会组织者，得向该会借用，该会每年都召开国际球类、游泳、田径、野外旅行男女长途竞走、越野、自行车比赛等，各项奖品由该体育会准备，也有由市机关或日本体育协会赠送的，1932年是该会支付体育运动费最多的一年，其数为3543元，唯与同年的优胜马奖金相比，则有天壤之别。"
+ SQI.8.a:0 "给我也买一张"
+ SQI.8.b:0 "想个办法入一股"
+ SQI.9.t:0 "青岛的青帮"
+ SQI.9.d:0 "1925年张宗昌督鲁，接着就派他的第八军军长毕庶澄前往青岛任青岛护军使，据说他俩都是青帮第22代“通”字辈，这样，就在“上有好者，下必有苦焉”的规律下，立刻使青帮由半秘密而转人全公开，这无异给青帮组织打下了基础。当时青岛帮会中素有“通字八虎”的说法，这些人大多都能和张宗昌牵连上。八虎兄弟彼此换帖拜把子，互相援引，摆香堂，收徒弟，在短短的一年之中，各人都有了相当的势力，尽管知此，青岛青帮分子到外埠就吃不开，特别是到上海，如果有人在上海“浅”(困)住了，想求同帮帮助，只要被人盘知是在青岛“扎根”(进家理)的，就立刻遭到白眼，得不到什么支援。原因何在?就是因为青岛的青帮分子多半是些不学无术毫无江湖侠气的人，他们怕花钱、怕麻烦，一旦遇到外埠青帮分子求援的时候，暗示帮规，则假装不懂，明言求助，则东推西诿，毫无“讲义气”“相扶相助”之意，所以就把青岛青帮的帮誉搞臭了。到28年张宗昌被靳云鹗赶下台跑来青岛后就更糟糕了，张宗昌虽然失去了部队，但是带来了颇多家财，后来又据说和张天然拜了兄弟。青岛的帮会就变成了他个人的私兵。"
+ SQI.9.a:0 "一帮子地痞流氓能干什么？"
 
  shandong.20.t:0 "一贯道寻求军事现代化"
  shandong.20.d:0 "消息传到了红枪会和大刀会等这些支持张天然的农民军耳中，他们开始向我们的地方官收购武器装备，不过他们所给的价钱属实惨不忍睹。然而地方官们却一起为他们背书，说支持他们就能削弱我们共同的敌人，我们可以私底下再给[SQI.GetNameDef]送一批武器，或者狠狠的揍他们的屁股。"
@@ -893,7 +917,7 @@
  SQI_pei_bei_zhong_huo_li:0 "扩建白俄军"
  SQI_pei_bei_zhong_huo_li_desc:0 "众所周知张宗昌有一支由俄罗斯人组成的雇佣兵军队，而当年这支军队携带的作战重型铁甲列车让奉系属实是开了眼。但也因此列车炮被张作霖扣押，并没能让张宗昌拉回山东。后来张宗昌被赶跑了，现在尸体都不知道被野狗咬成什么样。而白俄雇佣军却仍旧留在山东为靳督理效忠，而他们的势力也得到了军阀们的认可。"
  SQI_zhi_feng_zhi_jian:0 "直奉之间"
- SQI_zhi_feng_zhi_jian_desc:0 "从1920年直皖战争，皖系战败之后，靳云鹗就投奔了吴佩孚。但是没有人能一直仰人鼻息，现在直奉交锋的大环境之下，孙传芳已死，南方陷入动乱，而靳云鹗也有着自己的野心。"
+ SQI_zhi_feng_zhi_jian_desc:0 "二十年代末期的北伐、三次直奉、四次直奉三场战争为如今的中国奠定了近十年的直系独大政治格局。但是没有人，哪怕是直系内部会满足于当下，国民党在福建发起了二次北伐，北方的奉系军阀也一直秣马厉兵准备南下。哪怕是帝国的边陲之境新疆、西藏也都蠢蠢欲动，而我们，坐拥齐鲁之地的靳云鹗大帅当然也有着他自己的野心。"
 
  SQI_shu_li_tian_shi_xiang:0 "树立孔子像"
  SQI_shu_li_tian_shi_xiang_desc:0 "1922年张天然在泰山山顶建了一座神龛，而如今为了彰显自己对于孔孟的尊敬，他将仿照据传西方一个名叫巴西的国家修建的巨型雕像那般，在神龛之上修建一座巨型的孔子像。在山东的任意一个角落都将能接受到圣人的俯视。"
@@ -905,11 +929,13 @@
  SQI_pu_ji_jiao_yu_desc:0 "只有张天师才能拯救山东人民，只有在张天师的带领下人们才能扫清罪恶走向光明的未来，在那里人不独亲其亲，不独子其子，使老有所终，壮有所用，幼有所长，矜、寡、孤、独、废疾者皆有所养。移风易俗，化世界为大同。"
 
 #靳云鹏
- SQI_choose_wu:0 "靳云鹗选择忠于吴佩孚"
- SQI_choose_wan:0 "靳云鹗选择忠于自己的野心"
+ SQI_choose_wu:0 "§Y靳云鹗选择忠于吴佩孚§!"
+ SQI_choose_wan:0 "§Y靳云鹗选择忠于自己的野心§!"
 
  SQI_jin_yune_hog: "靳云鹗"
 
+ SQI_radical_socialist_party_wan:0 "国民党"
+ SQI_radical_socialist_party_wan_long:0 "国民党(Kuomintang)\n§g只要三民主义尚存，国民党永远不会就此轻易灭亡，即便我们能剿灭他们一次，他们也会重生第二次。§!"
  SQI_market_liberal_party_wan:0 "新交通系"
  SQI_market_liberal_party_wan_long:0 "交通系(Communications Clique)\n§g交通系起源于晚清负责铁路、航运、邮政、通信和交通银行事业的邮传部官僚。因为该部门是一个财政收入较高的部门，因而有较多的发言权，并派生出名为交通系的官僚体系。“交通系”控制着当时的国家经济命脉，是袁世凯政府的支柱之一。而当袁世凯政府倒台后，段祺瑞政府的财政部长财政总长重组了交通系，继续为政府提供财政打击政府内的直系官员。同皖系的其他外围组织一样，他们于1920年覆灭，多数人逃亡奉天。不过也有一些人如章宗祥回到了上海，现在选择重新出山，再入政坛。§!"
  SQI_authoritarian_democrat_party_wan:0 "研究系"
@@ -921,39 +947,15 @@
 
  SQI_shou_jin_yan_lu:0 "查封赤色报纸"
  SQI_shou_jin_yan_lu_desc:0 "民国是好的，但是这些赤色份子所篡改的民国概念是不行的。"
- SQI_agriculture_idea:0 "失衡的乡村"
+ SQI_agriculture_idea:0 "皖系的声望"
  SQI_agriculture_idea_desc:0 "稳定度：[?SQI.SQI_agriculture_stability|=%+2]\n战争支持度：[?SQI.SQI_agriculture_war_support|=%+2]\n政治点数：[?SQI.SQI_agriculture_political_power_factor|=%+2]\n生产效率上限：[?SQI.SQI_agriculture_production_max_factor|=%+2]\n生产效率增加：[?SQI.SQI_agriculture_production_gain_factor|=%+2]"
- SQI_agriculture_modifier:0 "失衡的乡村"
+ SQI_agriculture_modifier:0 "皖系的声望"
  SQI_localist_laws:0 "重塑央地关系"
  SQI_cai_zheng_zhi_chi:0 "财政支持"
  SQI_cai_zheng_zhi_chi2:0 "财政支持"
  SQI_fan_qing_xuan_chuan2:0 "反清宣传"
  SQI_china_shu_mai:0 "中国人的赎买"
  SQI_shu_mai:0 "赎买山东"
-
- SQI_close_tooltip:0 "解锁更多有关决议£GFX_decision_icon_small §G§!§Y处理农村问题§!的可执行内容"
- SQI_can_do:0 "§Y目前双方支持度还有上升或下降空间§!"
- SQI_farmer_up_Landlord_down:0 "§Y农民支持度将上升，而地主支持度会下降§!"
- SQI_Landlord_up_farmer_down:0 "§Y地主支持度将上升，而农民支持度会下降§!"
- SQI_Landlord_up_farmer_up:0 "§Y农民支持度将上升，地主支持度也会上升，但我们的资金将严重损耗§!"
- SQI_Landlord_up:0 "§Y这将提高地主的支持度§!"
- SQI_farmer_up:0 "§Y这将提高农民的支持度§!"
- SQI_chu_li_nong_chun_wen_ti:0 "处理农村问题"
- SQI_chu_li_nong_chun_wen_ti_desc:0 "自第一次鸦片战争以来，中华持续了数千年的小农经济开始步向瓦解，年复一年的天灾人祸，农村经济彻底破产，农民宁愿留在上海这样的大城市乞讨也不愿意回到他们的故乡。我们的乡村就这样被一贯道、工团份子、土匪强盗们霸占。为了挽救我们的农村危机，安定我们的社会，我们需要付出极大的代价。\n\n§g农民和地主有着不同的诉求，我们无法完全讨好他们双方。稳定度、战争支持度由农民支持度决定，政治点数由地主支持度决定。生产效率上限、生产效率增加由两者支持度共同决定。§!\n\n§C目前的农民支持度§!：[?SQI_Farmer_vote]\n§Y目前的地主支持度§!：[?SQI_Landlord_vote]"
- SQI_jian_zu:0 "推行二五减租"
- SQI_jian_zu_desc:0 "我们的农民绝大多数都是佃农，他们既要担心天灾人祸，还要担心地租连年上涨。我们将协调这个问题，推行更低的租金。"
- SQI_nong_ye_shui:0 "降低农业税"
- SQI_nong_ye_shui_desc:0 "尽管农业税是我们政府的重要收入来源，但是降低赋税能够同时提升农民和地主对我们的支持度，这值得尝试。"
- SQI_xiang_shen_zhi_chun:0 "乡绅治村"
- SQI_xiang_shen_zhi_chun_desc:0 "我们的乡村长年以来都有自己的运行逻辑，而那些工团分子和一贯道徒们都妄想颠覆这一逻辑，他们的尝试之后迎来失败。"
- SQI_wei_hu_xiang_chun_zhi_an:0 "维护乡村治安"
- SQI_wei_hu_xiang_chun_zhi_an_desc:0 "连绵不断的战乱最直接的结果就是乡村中充斥着无数的土匪强盗，他们对我们的社会稳定造成了严重的威胁。"
- SQI_mo_shou_bu_he_zuo:0 "没收不合作者的土地"
- SQI_mo_shou_bu_he_zuo_desc:0 "尽管我们需要乡绅们帮我们稳定乡村，但是并非所有乡绅都有眼力见和我们合作，那些不合作的家伙必须遭到处理。"
- SQI_bu_tie_di_zhu:0 "补贴地主"
- SQI_bu_tie_di_zhu_desc:0 "农业具有不稳定的系统风险，无论如何都无法解决靠天吃饭的问题。对农业给予补贴正是降低经济风险的一环。"
- SQI_jiu_ji_po_chan_nong_ming:0 "救济破产农民"
- SQI_jiu_ji_po_chan_nong_ming_desc:0 "对于天灾而言最大的直接后果就是大范围的农民破产，这些破产流民是最大的社会危机来源。无论是落草为寇还是在大城市当乞丐都不利于社会的稳定，为了缓解这一危机，最好的方式就是补贴那些破产的农民，"
 
  SQI_mai_xiang_gong_he:0 "迈向共和"
  SQI_mai_xiang_gong_he_desc:0 "自1911年辛亥革命以来，共和就是全体中华儿女所共同期盼之事务。袁氏昏逆、张勋篡国被蔡锷、段祺瑞将军所反对最终失败，共和长存。但谁人能想，夫吴佩孚口口声声赞颂共和之人，居然与洋人媾和复辟满清。这决不能为中华所忍，中国儿女不能坐视民国之颠覆分裂，华东将在三造共和元勋段祺瑞的带领下，四造共和！"
@@ -973,8 +975,8 @@
  SQI_zheng_liu_xiang_chun_wei_ji_desc:0 "自第一次鸦片战争以来，中华持续了数千年的小农经济开始步向瓦解，年复一年的天灾人祸，农村经济彻底破产，农民宁愿留在上海这样的大城市乞讨也不愿意回到他们的故乡。我们的乡村就这样被一贯道、工团份子、土匪强盗们霸占。为了挽救我们的农村危机，安定我们的社会，我们需要付出极大的代价。"
  SQI_jiao_mie_di_xia_dang:0 "清除地下党影响"
  SQI_jiao_mie_di_xia_dang_desc:0 "福建是已经沦为工团份子傀儡的国民党的根据地，他们的影响范围自福建开始蔓延到南京、安徽等地，我们需要一个民国概念来维系人心，我们可以和三民主义者有一定的合作，但是赤匪不行。"
- SQI_zhu_jie_wen_ti:0 "租界问题"
- SQI_zhu_jie_wen_ti_desc:0 "山东的德国租界一直是我们的心腹大患，尤其是旧皖系身上还有着向日本人割让青岛的污点。如果我们能够收回这一地区，那将洗刷我们身上的污点，并极大的增强我们的支持度，毕竟这是中国历代政府从未完成过的事情。" 
+ SQI_zhu_jie_wen_ti:0 "再谈不平等条约"
+ SQI_zhu_jie_wen_ti_desc:0 "我们的经济之所以如此亏损归根结底就是一系列不平等条约带来的关税不自主，德国人、日本人等等都可以不断对我们倾销货物，而我们的财产就这样不断的流失。为了改善这一问题，也为了挽救我们糟糕的名声，我们最好和我们的“盟友”德国人谈谈，也许我们可以用对徳条约换取对其他国家更轻的条约，毕竟，如今世界局势法、英、美、俄都陷入混乱，我们最需要担心的无非是徳、日。" 
  SQI_zheng_he_di_fang_quan_li:0 "整合地方权力"
  SQI_zheng_he_di_fang_quan_li_desc:0 "此前统治华东的是以南京孙传芳为中心的松散组织，各地督理各行其事，最终由孙传芳的遇害导致了一场全面内战。这样松散的组织是不适合我们的，就像1920年那场大败的核心原因就是因为各地割据军头不听我们的调遣。而这一次中央的意志必须得到贯彻，各地的自治状态必须结束。" 
  SQI_zu_zhi_fan_qing_xuan_chuan:0 "组织反清反直宣传"
@@ -989,18 +991,19 @@
  sqiwan.1.a:0 "玉帅之恩终不能忘"
  sqiwan.1.b:0 "段先生知遇之恩，没齿难忘"
  sqiwan.2.t:0 "恢复《民八宪草》"
- sqiwan.2.d:0 "无论如何追述，我们的宪法都起源于辛亥革命后所通过的《中华民国临时政府组织大纲》，后来又于1913年通过了《天坛宪草》，这是正式宪法的草案，尽管1915年袁世凯政府通过了《中华民国约法》，但是这部宪法因为之后袁世凯昏逆复辟废除之后，也无人再提起。在之后就是段帅1918年所草创的《民八宪草》，现在北京清政府所使用的所谓的1923《双十宪法》也正是基于《民八宪草》的。但曹锟作为贿选总统，民国也未恢复。这部宪法的价值也就无从提起。因而如今南京临时政府现在要恢复《民八宪草》，为光复民国做好铺垫。参议院当然是不会不通过的。"
+ sqiwan.2.d:0 "无论如何追述，我们的宪法都起源于辛亥革命后所通过的《中华民国临时政府组织大纲》，后来又于1913年通过了《天坛宪草》，这是正式宪法的草案，尽管1915年袁世凯政府通过了《中华民国约法》，但是这部宪法因为之后袁世凯昏逆复辟废除之后，也无人再提起。在之后就是段帅1918年所草创的《民八宪草》，现在北京清政府所使用的所谓的1923《双十宪法》也正是基于《民八宪草》的。但曹锟作为贿选总统，而民国早就随着满清皇室的复辟引来了终结，双十宪法从底子上就是一本完完全全的废纸，我们完全无法予以承认。因而如今南京临时政府既然已经宣布要再造民国，那么便要恢复民国的最后一本宪法：《民八宪草》。当然，这本宪法和如今的政治局势有着些许的冲突，但是既然是过渡宪法便无需太过于苛刻，国会已然全票通过，中华将再一次迎来宪政时代。"
  sqiwan.2.a:0 "做好准备"
  sqiwan.3.t:0 "南京誓师"
- sqiwan.3.d:0 "1917年7月1日，辫子军统帅张勋在狡诈小人黎元洪的唆使下，带兵进京解散国会、废除宪法、复辟满清，为万人所敌，辛有段帅马厂誓师仿松坡将军再造共和之事，进军北平覆灭妄图东山再起的满清政府。但是世事无常，直奉之辈自关内关外夹击段帅，不得已黯然下台，不问政事。虽1926甲子兵变，段帅再度出山，但是也只是在浪潮中盘旋。再往后北伐战争，德国人介入，满清三度复辟，那时我中华有志之士无不悲痛流泪，民国竟再次亡国，而无人敢率师再造共和。段帅、靳云帅虽有志哪怕玉碎也要与国同进退，但被身边人阻拦，要厚积薄发，二帅才就此“苟活于世”。而昔日参与讨伐张勋，以师长身份劝谏大总统南北罢兵和谈共和的吴佩孚竟然同贿选总统曹锟一同谄媚满清，竟然妄改宪法立什么《双十宪法》，言什么君主立宪。这一个一个谁不是吃民国饭，当民国官的？民国一亡便立刻自居满清复国元勋，这些人还有颜面对自家父老吗？/n/n今日，段、靳二帅于南京中山陵，祭奠辛亥元勋、中华民主革命的伟大先驱——孙中山先生后，举行阅兵仪式，通电全国，中华正统唯有民国，今诸公当戮力同心，共赴国难，四造共和，祺瑞虽衰，亦当执鞭以从其后也。敢布腹心，伏维鉴察。"
+ sqiwan.3.d:0 "1917年7月1日，辫子军统帅张勋在狡诈小人黎元洪的唆使下，带兵进京解散国会、废除宪法、复辟满清，为万人所敌，辛有段帅马厂誓师仿松坡将军再造共和之事，进军北平覆灭妄图东山再起的满清政府。但是世事无常，直奉之辈自关内关外夹击段帅，不得已黯然下台，不问政事。虽1926甲子兵变，段帅再度出山，但是也只是在浪潮中盘旋。再往后北伐战争，德国人介入，满清三度复辟，那时我中华有志之士无不悲痛流泪，民国竟再次亡国，而无人敢率师再造共和。段帅、靳帅虽有志哪怕玉碎也要与国同进退，但被身边人阻拦，要厚积薄发，二帅才就此“苟活于世”。而昔日参与讨伐张勋，以师长身份劝谏大总统南北罢兵和谈，以求共和的“大英雄”吴佩孚竟然同贿选总统曹锟一同谄媚满清，竟然妄改宪法立什么《双十宪法》，言什么君主立宪。这一个一个谁不是吃民国饭，当民国官的？民国一亡便立刻自居满清复国元勋，这些人还有什么颜面面对自家父老吗？\n\n今日，段、靳二帅于南京中山陵，祭奠辛亥元勋、中华民主革命的伟大先驱——孙中山先生后，举行阅兵仪式，通电全国，中华正统唯有民国，今诸公当戮力同心，共赴国难，四造共和，祺瑞虽衰，亦当执鞭以从其后也。敢布腹心，伏维鉴察。"
  sqiwan.3.a:0 "共和长存"
  sqiwan.4.t:0 "再谈山东问题"
  sqiwan.4.d:0 "山东的主人、中国华东地区的新领袖，我们的“老朋友”——靳云鹗给我们在东亚的代理人写了一封电报，这些家伙试图与我们谈判来重新获得青岛等地的控制权，至少是名义上的控制权。如果是更早一些时间这些家伙的提案可以说是毫无价值，我们的军队能够轻易瓦解他们，但是现在，老实说我们不得不思考一下，如果我们直接拒绝他们，这些家伙倒向日本人该怎么办。毕竟我们前一个傀儡孙传芳才死掉。如果现在我们完全失去东亚，这对好不容易稳定的帝国经济可没有一点儿好处。不过，即便我们要同意。我们也得从中取得最多的利益。"
  sqiwan.4.a:0 "他们休想"
  sqiwan.4.b:0 "有代价的换取"
- sqiwan.5.t:0 "国内借款"
- sqiwan.5.d:0 " "
- sqiwan.5.a:0 " "
+ sqiwan.4.c:0 "让中国人出血"
+ sqiwan.5.t:0 "与国民党握手言和"
+ sqiwan.5.d:0 "我们不会忘记国民党曾经也是国会的第一大党，只是后来出了些许变故，国民党在南，我们在北互相间产生了许许多多的误解这才导致了长年的南北内战。昔年是段祺瑞大统领犯了一些错误，一味的追求武力统治全国，如今段大统领公开向国民党承认了这一问题，并希望在光复民国的道路上能够同国民党携手并进，当然了这样的行为并没有挽回绝大多数国民党，但这只能说明这些人尤其是孙中山的遗孀宋庆龄早就已经被赤匪给蛀空了！只有像汪兆铭这样的有识之士，他在南京以国民党党主席的身份与临时总统段祺瑞达成了和解，双方握手言和表示旧事已经无需再提。尽管这立刻遭到了其他国民党人的进攻，但是这只能说明一件事情，赤匪需要立刻清除，我们需要将国民党变为孙中山三民主义的政党，而非什么工团主义赤匪党！"
+ sqiwan.5.a:0 "必须出重拳"
  sqiwan.6.t:0 "清剿腐败"
  sqiwan.6.d:0 "在张宗昌时期，由于其本人带头贪腐，山东政界烂得无法想象。尽管1928年后靳云鹗试图惩处相关人士，但是在没有资金支持和张宗昌派余温未散的情况下也无法更进一步，只能隔靴搔痒。但现在就不一样了，张宗昌死了，老对头屈映光也死了。靳云鹗在山东独揽大权，终于可以清理手底下这帮不拿钱就不办事的官僚们了。这些出身自孔孟之乡，多多少少读过儒经，还是不知廉耻的天天贪污腐败的官僚需要交出自己的腐败资产，然后挨上一颗子弹。"
  sqiwan.6.a:0 "要不还是砍头吧？"
@@ -1022,6 +1025,21 @@
  sqiwan.11.t:0 "奉天的回信"
  sqiwan.11.d:0 "张作霖发来了回信，他并没有直接表示对之后战事的看法，只是发来了几箱枪。无论如何，我们只是可以相信他应该不会再这场战争中站在我们的对立面。哪怕他们就这样保持中立都是最好的。"
  sqiwan.11.a:0 "没有永恒的敌人"
+ sqiwan.12.t:0 "渔工案"
+ sqiwan.12.d:0 "前些时日，青岛徳商经营的西村洋行(经营渔业)，突然派人到本埠区赵家村通知该行渔工赵玉连之亲属，声称“赵玉连于20日夜间在船上跌伤身死”，并令赶往领尸掩埋。赵玉连时年26岁，父母华迈，哥哥有病，弟弟尚幼，“数口之家胥赖其一人雇佣为生”，生活十分贫苦，月初，赵玉连为生活所迫，到青岛西村洋行充当渔工。该行有两艘捕鱼小轮船，赵玉连系随轮出海捕鱼。赵玉连之亲属闻此盟耗，明白赵玉连死得不明，于是立报水上警察分所，转报育岛地方检察厅莅场会验，又邀请青岛律师公会会长等人一同上船检视，则见死者赵王连尸体业经该船德国雇员移卧榻上，眼眶口鼻有血，左腮青赤肿起，面目肿胀，下颌有勒痕一道，赤晕血荫，两手曲拳，肛腹膨胀，显然是勒死的，根本不是‘跌伤致死’。他的亲属便向商埠局诉请提出交涉间，谁知道德国人竟然在28日夜间竞将死者尸体擅由该船移置西村洋行院内，该船开驶出港远飏。徳领事并用恫吓言词，迭催尸兄赵xx领尸理葬”，企图速了此案，蒙混过关。\n\n德国人的残暴行径，激起青岛人民强烈愤慨。青岛市民公会，青岛中国青年会，青岛律师公会暨青岛即墨同乡会等团体，联合发表通电，要求南京当局与日方交涉，并号召各界“一致援助，务达惩凶、道歉、抚恤之目的。”"
+ sqiwan.12.a:0 "必须严查到底"
+ sqiwan.12.b:0 "不过是起小案子"
+ sqiwan.13.t:0 "德国水兵殴打车夫"
+ sqiwan.13.d:0 "本月二十日下午五时余，市场三路日本电影院门前，有一车夫向一德国水兵讨要车资，德国水兵拒绝付款，二人便产生拉扯，车夫被德国人打伤甚重，附近守望警潘华志前往排解，亦被殴打，并将军衣撕烂。该警乃电报该管区第一分驻所，该所即派巡警孙德辰前往查看，又被徳兵群起殴打。巡警孙、潘二人被徳兵赶至市场二路门牌三十九号口商中井商店门前继续欧打，该警即鸣示警，商场商警吕茂才等闻声赶到，又被徳兵用绳捆起群殴，并鸣枪一声。斯时该徳兵等即将受伤巡警孙德辰绑上汽车，开赴胶州路第一分驻所，该听门岗高孙服务所持之三八式步枪一支，子弹二十粒，皮腰带一条，皮子弹盒两个，均被夺去。继到海泊路该所宿舍，适巡警陈城因病卧于床上，被日兵殴伤甚重，遂又将该警架上汽车，开往德国居留民团。临行时并拿去警刀三把。斯时胶州路东首用绕第一分驻所附近及市场三路有徳兵若干人，满布散兵线式岗位。第五分驻所堂邑路第三十守梁警王立进电话局往本署电话报告，出来被徳兵窥见，将其服务佩带之二六式手枪一支，警刀一把全部夺去。本署接电后立派巡官徐轩驰往肇地点查看情形，见巡警吕茂才受伤躺卧马路上。作案徳兵已溜进德国居留民团，关门大声，警察当局要求进去探视伤警，徳兵拒不放进。"
+ sqiwan.13.a:0 "必须惩办凶手"
+ sqiwan.13.b:0 "象征性抗议就差不多了"
+ sqiwan.14.t:0 "《德国残酷镇压青岛罢工》"
+ sqiwan.14.d:0 "近日发生了多起德国人伤人事件，这在山东半岛引发了轩然大波，自青岛隆兴纱厂罢工开始，青岛爆发了一场巨大的罢工运动，有的反对德国人，这其中尤以四方机工最为活跃，尽管近些年该厂多次爆发罢工又多次被镇压，但是如今看来该厂或是有某种罢工传统在传承。还有的如罢工导火索的青岛隆兴纱厂反对日本人。还有的则有着其他主张，总之汇聚成一股反对租界的巨大罢工浪潮。徳属东亚司令部以保护德企徳侨生命财产安全为理由，将军舰调入青岛。数千名德国兵登陆后立刻赶赴罢工各厂与工人聚集地，镇压工人运动。满载着武装军警的德国卡车在街道上横冲直撞，完全不顾中国工人的生命安全。各个主要路口均被封锁，德国官兵对行人多加骚扰，连小学生都不放过。\n据市立黄台路小学王校长向本报反应，该校学生陈某某兄弟二人于本月3日午后四时余，放学回家，行经辽宁路铃木丝厂门前，迎面走来徳兵四名，首以徳语辱骂，继即追上该生等，强令跪下，该生等不从，德国兵又横加威吓、殴辱，俟该兄弟被迫跪下后，这些人便大笑而去”\n德国兵已然如此，参与镇压的日本浪人行径更为恶劣。市立绥远路小学毕校长反应，是日晨，“本校学生来校时，被日本浪人殴打、侮辱者共二十名”。日本浪人对学生用拳打，用脚踢，用枪托捣，有的在大街将女学生搜身检查，并加以威吓和辱骂。这些受辱挨打学生中，最大的十五岁最小的只有八岁。如此小小孩童，竟无辜遭日本浪人殴辱，实为举世罕闻。"
+ sqiwan.14.a:0 "“必须严重警告”"
+ sqiwan.14.a:0 "“无稽之谈”"
+ sqiwan.15.t:0 "青岛隆兴纱厂罢工"
+ sqiwan.15.d:0 "青岛隆兴纱厂是一家日企纱厂，车间中长年又潮又闷，花毛满屋飞，加上机器噪音，劳动条件极为恶劣，再加那些往来巡视的日本监工们的恶狠狠的目光工人们简直就喘不过气来了。下班汽笛一响，工人们忍着饥饿，拖着疲惫的身体，向工厂大门口走出去。每个工人都想尽快回家，利用那微薄的工资(每月连两袋面粉都换不到的钞票)安排全家老小的生活。\n厂大门口早已放好了五条特制的铁栏通道。工人们说那是“鬼门关”。通道是用铁管做成的，一米左右高，中间留半米左右宽的走道，只能通过一个人，又每隔不到一米便是一个扮弯，从入口到出口要拐十四、五道弯。男工走三条女工走两条，门外站着搜身把头、岗卫和日本人。每个工人，走到入口处，要敞开上衣，解开裤带，先接受中国把头的搜身，从上到下，全身各处无不提查，连裤档内也不放过，走到出口处，几本把头还要搜查一遍。并还要强迫工人，无论春总秋冬，将裤子褪到腿弯以下，接受他们的检查。若发现一丝棉纱，他们就马上把工人搁绑起来，毒打一顿，轻则扣发工资，重则开除出厂。\n搜身本就是对中国工人人格的极大侮辱，而本来是女把头搜女工的身，男把头搜男工身。但后来，日本鬼子竟对青年女工起了邪心，竟让几个叫大铃木、小铃木的日本把头搜查女工。这几个坏蛋乘机大要流氓，对女工全身上下乱摸乱动，口吐脏话，极端下流。女工们，每过此“关”，都忍不住流出气愤的泪水。被搜过身的青年女工，呜呜地哭着扑向等在大门日外，年龄稍大些的女工叫喊着：“这气怎么能受得下去啊！”\n一天，工人们再也忍耐不下去了，女工们在厂门口附近越聚越多，大家忘记了一天的劳累，似乎是在一起商量好了谁也不肯离去。个个握紧了拳头，怒视着那几个野兽般的日本把头，异口同声道：“咱们再也不能让他们这样欺侮了！”因长期的压追、侮辱，姊妹们气愤地跺着脚，互相诉说着鬼子的罪行。无比的惯怒化为团结的力量，“咱们明天谁也不来上班了！”“对，谁也不来上班！谁来，谁就是汉奸！”这些坚定的话语成为工人们罢工的誓百。第二天，白班上工的汽笛早已响过，可是没有一个白班的工人接班。车问的机器全部停了，全厂生产陷于瘫痪。"
+ sqiwan.15.a:0 "不知道事态要怎么化解"
 
 #白俄
  SQI_SHA: "山东政府"
