--- a/localisation/KR_Shandong_l_simp_chinese.yml
+++ b/localisation/KR_Shandong_l_simp_chinese.yml
@@ -263,6 +263,7 @@
  SQI_schantung_bergbaugesellschaft:0 "山东铁路矿业公司"
  seventy_two_cannon_artillery_foundry:0 "七二炮铸造厂"
  SQI_seventy_two_cannon_artillery_foundry_mio_desc:0 "火炮生产设计商"
+ LEP_jinling_arsenal_mio_desc:0 "步兵装备生产设计商"
  jinan_arsenal:0 "济南兵工厂"
  jinan_arsenal_improved:0 "济南兵工厂"
  jinan_arsenal_mio_desc:0 "步兵装备生产设计商\n§L济南兵工厂兴建于1875年，是一家历史悠久的军工企业。生产机构设机器、火药、枪弹、白药、炼铁、铸铁、轧铜、化铜、木工、工程10所。以枪弹、手榴弹、飞机炸弹引信为主要产品。§!"
@@ -628,8 +629,11 @@
  SQI.8.a:0 "给我也买一张"
  SQI.8.b:0 "想个办法入一股"
  SQI.9.t:0 "青岛的青帮"
- SQI.9.d:0 "1925年张宗昌督鲁，接着就派他的第八军军长毕庶澄前往青岛任青岛护军使，据说他俩都是青帮第22代“通”字辈，这样，就在“上有好者，下必有苦焉”的规律下，立刻使青帮由半秘密而转人全公开，这无异给青帮组织打下了基础。当时青岛帮会中素有“通字八虎”的说法，这些人大多都能和张宗昌牵连上。八虎兄弟彼此换帖拜把子，互相援引，摆香堂，收徒弟，在短短的一年之中，各人都有了相当的势力，尽管知此，青岛青帮分子到外埠就吃不开，特别是到上海，如果有人在上海“浅”(困)住了，想求同帮帮助，只要被人盘知是在青岛“扎根”(进家理)的，就立刻遭到白眼，得不到什么支援。原因何在?就是因为青岛的青帮分子多半是些不学无术毫无江湖侠气的人，他们怕花钱、怕麻烦，一旦遇到外埠青帮分子求援的时候，暗示帮规，则假装不懂，明言求助，则东推西诿，毫无“讲义气”“相扶相助”之意，所以就把青岛青帮的帮誉搞臭了。到28年张宗昌被靳云鹗赶下台跑来青岛后就更糟糕了，张宗昌虽然失去了部队，但是带来了颇多家财，后来又据说和张天然拜了兄弟。青岛的帮会就变成了他个人的私兵。"
+ SQI.9.d:0 "1925年张宗昌督鲁，接着就派他的第八军军长毕庶澄前往青岛任青岛护军使，据说他俩都是青帮第22代“通”字辈，这样，就在“上有好者，下必有苦焉”的规律下，立刻使青帮由半秘密而转人全公开，这无异给青帮组织打下了基础。当时青岛帮会中素有“通字八虎”的说法，这些人大多都能和张宗昌牵连上。八虎兄弟彼此换帖拜把子，互相援引，摆香堂，收徒弟，在短短的一年之中，各人都有了相当的势力，尽管知此，青岛青帮分子到外埠就吃不开，特别是到上海，如果有人在上海“浅”(困)住了，想求同帮帮助，只要被人盘知是在青岛“扎根”(进家理)的，就立刻遭到白眼，得不到什么支援。原因何在？就是因为青岛的青帮分子多半是些不学无术毫无江湖侠气的人，他们怕花钱、怕麻烦，一旦遇到外埠青帮分子求援的时候，暗示帮规，则假装不懂，明言求助，则东推西诿，毫无“讲义气”“相扶相助”之意，所以就把青岛青帮的帮誉搞臭了。到28年张宗昌被靳云鹗赶下台跑来青岛后就更糟糕了，张宗昌虽然失去了部队，但是带来了颇多家财，后来又据说和张天然拜了兄弟。青岛的帮会就变成了他个人的私兵。"
  SQI.9.a:0 "一帮子地痞流氓能干什么？"
+ SQI.10.t:0 "耶稣家庭"
+ SQI.10.d:0 "自从基督教传入中国也有数百年了，近代由于帝国主义打着传教的幌子实际上毒害我国百姓这才点燃了近代义和团起义的火焰。也将基督教推入了漩涡之中，百姓连带着洋人一起反对这种洋教。为了扭转基督教在百姓心目中的印象无论是罗马教廷还是那些新教组织，又或是中国本地教会都在努力。其中一个组织就是发祥于山东泰安马庄的“耶稣家庭”。这是一个略带有一些古怪的基督教组织他们的信仰基于“灵恩派”、创始人敬奠瀛本人出身的“美以美会”，以及古老的大同思想。\n凡是加入的人都需要“破产”，完全破除自己的私财，斩断世俗家庭，赤手入家。为了满足家庭的需要，每个“家人”无论是谁有什么的身份，不管是是家长，还是传道的，人人都需要工作，为家庭做出贡献，每一个家庭都是一个自给自足的小社会。普通成员都是兄弟姐妹，唯有“家长是神指定的领袖”，有无上的权威。对“家庭”的普通信徒来说，是近似于取消了私有财产，取消了家庭在粗陋的平均主义、禁欲主义的基础上过着苦行僧的生活。\n一些贫苦的农民信徒，出于生活的无奈，加入了“耶稣家庭”。加入“家庭”对他们来说，失去很少，换来的是一个较安定的生活环境，能够维持最低水平的生活。他们吃苦耐劳，在家庭”里承担了绝大部分艰苦的劳动，为“家庭”创造了许多财富。也有一些地主和资本家出身的，他们厌倦了军阀、帝国主义、黑帮们的侵扰，最终放下万贯家财进入家庭，以求安宁。"
+ SQI.10.a:0 "安安稳稳的别给我闹事就好"
 
  shandong.20.t:0 "一贯道寻求军事现代化"
  shandong.20.d:0 "消息传到了红枪会和大刀会等这些支持张天然的农民军耳中，他们开始向我们的地方官收购武器装备，不过他们所给的价钱属实惨不忍睹。然而地方官们却一起为他们背书，说支持他们就能削弱我们共同的敌人，我们可以私底下再给[SQI.GetNameDef]送一批武器，或者狠狠的揍他们的屁股。"
