--- a/localisation/QD_military_industrial_organization_l_simp_chinese.yml
+++ b/localisation/QD_military_industrial_organization_l_simp_chinese.yml
@@ -62,6 +62,24 @@
  SQI_si_fang_upgrade_1_2_5: "扩大材料回收"
  SQI_seventy_upgrade_upgrade_2_2: "专为防空设计"
  SQI_seventy_upgrade_upgrade_2_3: "专为装甲设计"
+ toz_upgrade_1: "光学瞄具"
+ toz_upgrade_2: "实验性反坦克榴弹"
+ toz_upgrade_3: "扩大破片榴弹"
+ toz_upgrade_4: "实验性防弹服"
+ toz_upgrade_1_1: "武器全面测试项目"
+ toz_upgrade_1_2: "实验性反载具地雷"
+ toz_upgrade_1_3: "射击模式选择器"
+ toz_upgrade_1_4: "轻机枪旋转式供弹气缸"
+ toz_upgrade_1_5: "实验性半自动步枪"
+ toz_upgrade_2_1: "迫击炮弹簧式减震器"
+ toz_upgrade_2_2: "简易迫击炮弹簧式减震器"
+ toz_upgrade_2_3: "量产迫击炮弹簧式减震器"
+ toz_upgrade_2_4: "平稳型重机枪供弹系统"
+ toz_upgrade_2_5: "斜杆式地雷引信"
+ toz_upgrade_2_6: "简易斜杆式地雷引信"
+ toz_upgrade_2_7: "量产斜杆式地雷引信"
+ toz_upgrade_3_1: "加重迫击炮打击套件"
+ toz_upgrade_4_1: "改进金陵兵工厂"
  SQI_si_fang_trait_cic_tt: "§g每有一级§H军工机构§!规模，通过研究获取的£civ_factory_output §H经济产能盈余§!将额外增加§G+250§!§!"
  SQI_si_fang_research_cic_tt: "\n§g提高§H军工机构§!规模，也将提高通过[?CIC_bonus]研究获取的£civ_factory_output §H经济产能盈余§!\n\n在该活动期间，获取的£civ_factory_output §H经济产能盈余§!总值：§W[?total_campaign_CIC]§!§!"
  SQI_manufacturer_trait_research_gain_bmz_tt: "§g§H七二炮铸造厂§!当前每有§W1%§!的£research_speed_icon §H研究速度§!，£research_speed_icon §H研究速度§!每周增长将提高§G+0.04%§!\n\n目前§H七二炮铸造厂§!拥有§W[?current_research_bonus]%§!的£research_speed_icon §H研究速度§!，这将使得£research_speed_icon §H研究速度§!每周增长提高§G+[?weekly_research_speed_to_add|.2]%§!"
