--- a/localisation/KR_Shandong_l_simp_chinese.yml
+++ b/localisation/KR_Shandong_l_simp_chinese.yml
@@ -396,6 +396,7 @@
  SQI_gu_li_guo_huo_not:0 "鼓励“国货”"
  SQI_gu_li_guo_huo_not_desc:0 "山东制造，大帅精选，我的选择"
  SQI_su_mai_qing_dao:0 "赎买青岛"
+ SQI_su_mai_qing_dao_desc:0 "请注意该决议可能将导致德国控制度巨幅上升"
  SQI_agricultural_reform_mission_timer:0 "解决粮食危机"
  SQI_jiang_di_dian_zu:0 "耕者有其田"
  SQI_jiang_di_dian_zu_desc:0 "农民能够占到我省人口的百分之九十，耕种优质农田的大多数都是雇农、佃农或者半佃农，自耕农们只拥有那些贫瘠的土地。然而同时，省内山东大地主并不多，大部分情况下农民们也是按照资本主义的方式雇佣，时土地使用权与所有权的分散，使得拥有相当土地的地主、富农将自己无力耕种的土地或租佃或雇工经营，而农民自身不仅缺少资金、牲畜、种子及生产工具，还极易受到各种因素的影响，如婚丧、天灾等，因此不可能租种整批田地。为了解决这种情况，我们就需要让地主们全身心的投入，让农民们赎买他们耕种的土地，去实现孙中山所谓的“耕者有其田”。"
@@ -1013,6 +1014,11 @@
  SQI_jing_ying_yi_wu_dominance:0 "精英的义务"
  SQI_military_state:0 "军人的责任"
  SQI_modern_bonapartism_idea:0 "东方波拿巴"
+ SQI_the_new_generation:0 "新青年"
+ SQI_flee_to_zongchang3:0 "权力稳固"
+ SQI_flee_to_zongchang5:0 "活力，骄傲，秩序"
+ SQI_flee_to_zongchang5_desc:0 "我们的人民充满活力，他们对自己的国家包含着骄傲，我们的社会秩序是如此的稳固，没有人能够动摇。他们将同我们一起进入崭新的、宏伟的未来，否则他们将被打成国家之敌。这些新敌人将在法律的准许范围内受到无情的迫害，直到他们被绳之以法或被赶出国境。我们的国家是如此伟大，我们的总统是如此的热爱他的国家，我们的人民也是如此的敬爱我们的总统。"
+ SQI_xin_ru_xue2:0 "立国之本"
  SQI_shu_mai:0 "赎买山东"
 
  SQI_mai_xiang_gong_he:0 "迈向共和"
@@ -1054,7 +1060,7 @@
  SQI_jiang_li_zhong_cheng_desc:0 "如果不是我们背后的民族企业家们，我们绝对走不到今天，我们的军队能从山东一省之地到如今囊括南北两京，手握半个中国一部分是我们的将士们奋勇拼杀，另一部分便是在经济上有他们的鼎力相助。如今北京已然光复，我们当然要犒劳这些忠诚之人，共和国不会愧对他们。"
 
  SQI_fang_kaI_shuang_shou:0 "放开双手"
- SQI_fang_kaI_shuang_shou_desc:0 "最终，靳云鹗大帅力排众议，他不会宣布自己将继承已故总统段祺瑞的席位，他将退居幕后全然支持克希克图竞争总统，他将守护这个自己亲手再造的民国，而有了他的发言，克希克图的选举之路自然是一帆风顺。"
+ SQI_fang_kaI_shuang_shou_desc:0 "最终，总理靳云鹗大帅力排众议，他不会宣布自己将继承已故总统段祺瑞的席位，他将退居幕后并全然支持克希克图竞争总统，他将守护这个自己亲手再造的民国，而有了他的发言，克希克图的选举之路自然是一帆风顺。"
  SQI_mai_bu_xin_shi_dai:0 "迈步新时代"
  SQI_mai_bu_xin_shi_dai_desc:0 "我们的政治长期被老人把持，一片死气沉沉，急需要一场改革。国家的未来当属于年轻人们，他们是新生的太阳，是国家真正的希望。然而世界是如此的险恶，我们必须尽全力教导他们，让他们走在正道上，让他们成为一个个动力十足、充满激情、活力四射，抛却个人得失，一心为国奉献的人"
  SQI_que_bao_zong_cheng:0 "确保忠诚"
@@ -1159,12 +1165,12 @@
  sqiwan.18.d:0 "皖系从来都不是一个密切的同盟，同盟内部的互相攻伐更是随处可见。哪怕是段祺瑞的四大金刚也是如此，1920年皖系覆灭之前，靳云鹏与徐树铮的关系就已经降到了冰点，徐树铮虽有才能但是为人飞扬跋扈。哪怕是靳云鹏当上了总理，安福系不仅不支持反而在徐树铮的指示下不断发起阁潮要推翻靳云鹏，最终靳云鹏无奈辞职，政局动荡，点燃了直皖战争的火焰，徐树铮又企图刺杀张作霖将奉系也推向倒皖的一方。而在那场战争中靳云鹏同样是点火人，他里应外合，将皖系推入了覆灭的深坑。如今他的弟弟靳云鹗为了击败吴佩孚，再造皖系。这些从前的皖系老人，朋友，仇人们相聚在一起。彼此沉默无语，这是数十年来头一遭大家重新坐在同一张桌子前，如靳云鹏一般的窝在天津当寓公，如曲同丰一般的投降直系“流放”山东。这是一场无言的会议，最终彼此也没有任何交谈会议就结束了。毕竟他们也不过是靳云鹗亲来的傀儡，手上既无兵，又无权，又有什么好交流的呢？数十年时光彼此的仇恨也早已将消磨殆尽了，相见更是无言。"
  sqiwan.18.a:0 "哪儿来的仇，哪儿来的怨呢？"
  sqiwan.19.t:0 "段祺瑞的葬礼"
- sqiwan.19.d:0 " "
+ sqiwan.19.d:0 "一则悲伤的消息从北京弥漫开来，随后席卷了全国大街小巷。昨日刚刚向全国人民发表演讲的大总统、独夫民贼、四造共和元勋、无数卖国条约签订者、争议缠身但又是如今无可置疑的民国英雄段祺瑞元帅在睡梦中与世长辞。他数年前就重病缠身早应离世，但为了那个宏大的目标，为了全体国民，他一直挺到了现在，他已经完成了他的夙愿，在世间再无任何留念的他并没有要求任何人陪伴在他的身边进行临终关怀，也因此没有留下任何遗言就这样悄然离开了我们。\n\n我国政府已计划为其举行国葬，在我们的国歌《卿云歌》的歌声中，我国的全体政治与军事人物都将出席葬礼，同时临时总统靳云鹗也宣布，届时全国降半旗哀悼半小时，随后举行为期一周的全国哀悼。对于许多人而言，也许如此那个军阀割据，波谲云诡的时代才真正的结束了。"
  sqiwan.19.a:0 "含笑而终"
  sqiwan.20.t:0 "靳云鹗的抉择"
- sqiwan.20.d:0 " "
+ sqiwan.20.d:0 "段大帅去世了，但政府还得继续，按照宪法规定大总统缺位时，由副总统继伍，至本任大总统期满之日止。然而如今政府并没有产生所谓的副总统，因此由国务院总理靳云鹗摄行其职务。同时国会议员于三个月内自行集会，组织总统选举会，行次任大总统之选举。然而政府内所有人都知道，无论段祺瑞是否活着，真正领导着这个国家的只有他靳云鹗。他之所以担任国务院总理也不过只是他哥哥曾经当过，他要证明这个位置他想做就能做而已。\n\n如今总统选举在即，但只要靳云鹗透露出一丝丝想要留在总统席位上的意愿就没有人能够阻拦他，他必然能够成功。但是，自辛亥革命以来军人政治的时代太长了，无论是当年多么强大的袁世凯，抑或是他的两位恩师段芝泉、吴子玉谁又能够长久呢？军人们只想要权力，但是对于治理整个国家而言实在是兴致缺缺。也许他是时候该退居幕后了，但是这个国家是他一手缔造的，他不该放任任何人胡作非为，他需要怎么做？"
  sqiwan.20.a:0 "他将保护他的国度"
- sqiwan.20.a:0 "他将放开自己的双手"
+ sqiwan.20.b:0 "他将放开自己的双手"
  sqiwan.21.t:0 "没有异议的国会"
  sqiwan.21.d:0 "“没有”，“没有”，“没有”。“我宣布法案通过。”\n\n自从靳大帅开始清洗国会而言，全票通过在国会就不再是什么罕见的事情。靳云鹗对于控制选举毫无兴趣，无论是议员的产生还是议长的产生，他都全然不过问，他不需要干涉这些对他无意义的事情，他需要控制的是更高的东西。因此尽管靳云鹗从来没有公开宣布过，从来没有公开干涉过，但是每一个议员心里都明白，他们应该服从靳云鹗的任何意志，服从他的任何命令，不能持有一点异议。质问权、查办权、弹劾权、受理请愿权等等，那些国会本应行使的权力不再被任何人提起。"
  sqiwan.21.a:0 "你只需要服从"
@@ -1174,6 +1180,15 @@
  sqiwan.23.t:0 "总统制国家"
  sqiwan.23.d:0 "今日之中华与昔日分裂军阀分治之中华相比已是天壤之别。如今的她国力强盛、精神焕发，争吵、抗议、纠纷都在靳云鹗总统强有力的领导下荡然无存。全体民众紧跟敬爱的靳总统的步伐，并肩齐步向前迈进。一些人仍在为那所谓的民主思想唱着挽歌，甚至还有些人缅怀帝制，但真心希望其能起死回生者寥寥无几。相反，大多数人都在这个全新的国度里感到安详，再也没有战火侵扰我们的安全，一切都是如此的祥和。"
  sqiwan.23.a:0 "他将保护他的国度"
+ sqiwan.24.t:0 "新青年"
+ sqiwan.24.d:0 "我们的政府一片老气横秋，我们的社会是如此的推崇少年老成，仿佛老便是好。这是何其的谬论，青年如初春，如朝日，如百卉之萌动，如利刃之新发于硎，是人生最可宝贵的时期。青年之于社会，犹新鲜活泼细胞之于人身，新陈代谢，陈腐朽败者无时不刻不在天然淘汰的道路上，让新鲜活泼者占据空间之位置及时间之生命。人身遵新陈代谢之道则健康，陈腐朽败之细胞充塞人身则人身死；社会遵新陈代谢之道则隆盛，陈腐朽败之分子充塞社会则社会亡。我们的国家想要强盛，我们的社会想要焕发新的活力就需要让我们的青年们活跃起来，以他们那张扬的生命力去唤醒我们这个垂垂老矣的国度。"
+ sqiwan.24.a:0 "青年们，世界终究是你们的"
+ sqiwan.25.t:0 "国学的重要性"
+ sqiwan.25.d:0 "世人常论西学如何如何，缺少论国学如何如何，对孔教更是避之不谈，何其荒谬。孔教，是我国精神所寄，更是我们立国之根本源泉。孔教存则国存，孔教亡则国亡。《论语》《孟子》等经典，“是两千年国人思想的总源泉，支配着中国人的内外生活，其中有益身心的圣哲格言，一部分久已在我们全社会形成共同意识，我们既做这社会的一分子，总要彻底了解它，才不致和共同意识生隔阂。”对优秀传统文化进行创造性转化与创新性发展，应保存、养育“三心”，即敬畏之心、恻隐之心、羞恶之心，进而体验“三个合一”的境界，即天人合一、群己合一、知行合一之境。今欲救国危，宜先保孔教；欲保孔教，非定为国教不可。"
+ sqiwan.25.a:0 "孔夫子的精神永垂不朽"
+ sqiwan.26.t:0 "我骄傲，我是中国人"
+ sqiwan.26.d:0 "在无数蓝色的眼睛和褐色的眼睛之中，我有着一双宝石般的黑色眼睛，我骄傲，我是中国人！\n在无数白色的皮肤和黑色的皮肤之中，我有着大地般黄色的皮肤，我骄傲，我是中国人！\n我是中国人————黄土高原是我挺起的胸脯，黄河流水是我沸腾的热血，长城是我扬起的手臂，泰山是我站立的脚跟。我骄傲，我是中国人！\n我是中国人————我的祖先最早走出森林，我的祖先最早开始耕耘，我是指南针、印刷术的后裔，我是圆周率、地动仪的子孙。在我的民族中，不光有史册上万古不朽的孔夫子、司马迁、李自成、孙中山，还有那文学史上万古不朽的花木兰、林黛玉、孙悟空、鲁智深。我骄傲，我是中国人！\n我是中国人！"
+ sqiwan.26.a:0 "我是中国人！"
 
 #白俄
  SQI_SHA: "山东政府"
