--- a/localisation/KR_Shandong_l_simp_chinese.yml
+++ b/localisation/KR_Shandong_l_simp_chinese.yml
@@ -424,6 +424,7 @@
  SQI_xuan_yang_xian_zheng:0 "宣扬宪政"
  SQI_yan_lun_guan_zhi:0 "言论管制"
 
+ SQI_agricultural_reform_completed_flag: "§Y粮食危机已经解除§!"
  SQI_wan_victory_tooltip: "§Y段祺瑞§W终于完成了他的§G夙愿§W"
  SQI_can_up_wan: "§Y我们能够挽回我们的名声§!"
  SQIwansmall: "§R民怨沸腾（[?SQI.SQI_wan_xi_var|0]）§!"
@@ -434,6 +435,7 @@
  SQIwanall: "§G有口皆碑（[?SQI.SQI_wan_xi_var|0]）§!"
  SQI_wan_investment_small_tooltip: "§s皖系军阀的名声§!§Y增长§!§G5%§!"
  SQI_wan_investment_medium_tooltip: "§s皖系军阀的名声§!§Y增长§!§G10%§!"
+ SQI_wan_investment_large_tooltip: "§s皖系军阀的名声§!§Y增长§!§G15%§!"
  SQI_wan_spend_small_tooltip: "§s皖系军阀的名声§!§Y降低§!§G5%§!"
  SQIsmall: "§R低（[?SQI.SQI_gea_influence_variable|0]）§!"
  SQIlittle: "§Y低（[?SQI.SQI_gea_influence_variable|0]）§!"
@@ -609,6 +611,9 @@
  shandong.1.t:0 "1936年：山东的转折点"
  shandong.1.d:0 "山东是一个特殊的省份，这里是袁世凯的发祥地，这里也是儒家重镇，无数次的教案、青岛的失陷、德日的残暴行径，义和团的余温在齐鲁大地上从来没有熄灭过，对外国人的仇恨埋藏在每一个爱国山东人的心底。德国人的影响也不止于此，威廉二世那“模范殖民地”的构思为青岛带来了最先进的工业，这也促使了身处山东的军阀或多或少对培植产业、借用外债、控制财政表现出浓厚的兴趣，尽管山东依旧是一个田赋占收入百分之六十以上农业省，但是工业基础丝毫不弱于那些南方省份。但也同样是因为德国人的存在，山东的一切经济运作都离不开他们的身影，哪怕是欧战期间德国人不得不离开，日本人也很快补上了这个缺口，山东的工业从来不为山东人牟利。\n\n1926年，国民党的北伐，德国人的干涉更是加重了这一点，在无能的张宗昌统治下山东几乎快要成为德国人的附属。但是1928年，靳云鹗的到来扭转了这一点，尽管比起张宗昌，靳云鹗不仅没有北京的宠爱甚至还失去了奉天的支持。但是靳云鹗从来都不是张宗昌那个只知道抽大烟、嫖娼赌博的土匪，他继续对德国人示好，也在背后利用民族情绪煽动着对山东民族工业的支持。他在这条钢丝绳上左右摇晃但又稳稳当当，然后命运向他开了一个玩笑...在他为民族主义煽风点火的同时，另一个人却收获了更大的果实。那就是在泰山6600阶梯之上，那个自封为一贯道第十八代祖师的张天然。被靳云鹗赶下去的张宗昌也跑到了泰山之上，宣布自己皈依一贯道，更何况北京从来没有放弃过在山东换上一个更加稳妥的人..."
  shandong.1.a:0 "爷不管，火车晚点了"
+ shandong.2.t:0 "路中节到了济南"
+ shandong.2.d:0 "今天，靳云鹗终于逮到了个狠狠羞辱张天然的机会。为了在一贯道内维持自己的地位，张天然发动了一场政变清算了他的前师父路中一的残留势力，尤其是把他妹妹路中节赶了出去。最近几个月以来，靳云鹗无休止地与一贯道还有张宗昌的人打交道，而路中节将成为对一贯道响亮的反击，这就是为什么她一定要回山东，哪怕只是开个玩笑。靳云鹗为了羞辱张天然，特意给路中节献花，还鸣了21响礼炮来庆祝路中节的到来。如果山东的百姓一定要有一个信仰，一贯道一定要存在的话，教主当然要是靳云鹗可以控制的人。"
+ shandong.2.a:0 "子弹总得有个去处"
  SQI.1.t:0 "青岛四十年"
  SQI.1.d:0 "青岛本是山东半岛东南一个默默无闻的小渔港，直到巨野教案的爆发，胶州湾被德国人占领，由此开启了列强“瓜分中国”风潮，这座渔港正式走上历史舞台。德皇威廉二世在1888年继承王位，他的抱负是：既然先祖威廉大帝的成就在于使德意志帝国成为欧洲强国，那么自己的使命便在于使德意志帝国成为世界强国。山东半岛便成为德意志帝国的重要考虑，而青岛更是势在必得的首要目标。胶州湾便是德意志向世界发出的第一枪。为了建设这个远东的重要基地，德意志帝国一开始就将这个占领地定位为“模范殖民地”，即企图用科学规划、专业性实施和国家监督，建设一个现代的、讲求效益的殖民地，但同时也强调“种族主义”意识形态的贯彻。第一年德国投入500万马克，第二年为850万马克，其后八年(1900～1907)德国平均每年支出一千二三百万马克。这十年间，德国投资颇多，而收入甚少。直到1908年之后，投资效益才逐渐浮现，本国的补助才逐年降低，而地方收益则呈逐年增加之势。\n\n德国人初到胶州湾时，此地人数不过1500人，不及中国的一个村落，十余年之后，青岛却是中国之大都市。当然，德国人并非是来青岛做慈善的，他们的目标从来都不只是青岛，他觊觎的目光其实是射向黄河中下游这个更大的区块。而这一切来得是如此之快，第一次世界大战的胜利为德意志攫取了广袤的非洲殖民地和东南亚殖民地，随后中国国民党的北伐战争又给了德国再次介入中国的借口。在南方扶持齐燮元，在北方扶持满清皇室，尽管青岛仍旧是德国在中国的少数领地，但是其重要性变得却越来越低。曾经的青岛对于每一个前来讨生活的德国人而言是机会的天堂，可是如今，柏林的资金越来越多的流入南京、广州、上海甚至是天津，这个北方曾经的繁华都市正在一天又一天衰落下去，青岛逐渐的变成了德意志官员们的流放地..."
  SQI.1.a:0 "不，这一切都不会发生！"
@@ -703,14 +708,11 @@
  shandong.990.d:0 "洋人理解不了中国人和天地之间的深切联系，这帮子洋人玩着他们铁与火的玩具，而我们则掌控着自然宇宙之力，我们受命于天，定将洋人赶出中国。"
  shandong.990.a:0 "在石窟里靠一点残羹剩饭就能活着，真是可以了……"
 
- shandong.2.t:0 "路中节到了济南"
- shandong.2.d:0 "这天，靳云鹗逮到了个羞辱张天然的机会，为了在山上建立他的邪教，张天然不得不驱逐他的前师父路中一的妹妹路中节，最近几个月以来，靳云鹗无休止地与一贯道还有张宗昌的人打交道，而路中节将成为对一贯道响亮的反击，这就是为什么她一定要回山东，哪怕只是开个玩笑。为了增加冲击力，靳云鹗带着他的老母亲来参加这个欢迎仪式。靳云鹗为了羞辱张天然，特意给路中节献花，还鸣了21响礼炮来庆祝路中节的到来"
- shandong.2.a:0 "子弹总得有个去处"
  shandong.970.t:0 "乐极生悲"
  shandong.970.d:0 "在暴力的欢乐之中，靳云鹗把他妈和路中节送到了一个镇子上，并且打算在镇子里好好玩一玩。当然，靳云鹗偶尔会停止享乐，把所谓的“民生”施舍给拾人涕唾的难民。不过当天在靳云鹗的商务办公室遭到了一贯道抗议者的袭击，靳云鹗迎回路中节这事儿让他们非常不爽，在靳云鹗开车撵他们之前，他们对靳云鹗骂不绝口。当晚的坏事还不只这些，山东不只是靳云鹗与张宗昌、一贯道双方角力，吴佩孚的“特务”，同样是从皖系投奔到直系的屈映光一直不满靳云鹗凭借兵力霸占山东的举动。他认为他才是那个有资格督理山东的人，而现在他找到了机会他窃取到了一封靳督理写给他哥哥靳云鹏的密信，里面详细记载了靳云鹗推翻直系的计划。现在靳云鹗正面临着巨大的危机，但他还毫不知情..."
  shandong.970.a:0 "真他妈该死"
  shandong.3.t:0 "屈映光的间谍被捕"
- shandong.3.d:0 "济南的晨光洒在床头檀木柜之上，一旁的美人依然在梦中回忆着昨夜的云雨放浪，但此时，山东的督理靳云鹗将军，却在门外看到了一个神秘的访客。小朋友们，我们的故事就从这里开始了。将军眉头一皱，立即察觉到了危险的气氛。他对他的妻子们和守卫们说，“快，你们快躲起来，我来对付这个人”，随后成功地抓住了那个入侵者。接下来，将军让高汝桐去和这个神秘人对话，虽然神秘人极其狡猾，编出了一个又一个的谎言试图迷惑陈将军，但最终还是一一被陈将军看穿了。在陈将军锐利的目光面前，他不得不承认，他其实是大坏蛋屈映光派来的人。不止如此，陈将军还在这个人身上搜到了危险的武器，大吃一惊的他赶紧向靳大将军说到，“靳大人，我们应该立刻派人去屈映光的老巢调查一番，看看这家伙的老窝能不能撑住烈火的攻击”。但另一位从遥远日出之国赶来协助靳大将军的伊达顺之助将军却不这么认为，他用不太标准的中文说到，“屈映光的，大大的狡猾的干活。他的，应该已经知道自己的阴谋败露了的干活，所以我们的，去铁路阻止他们的干活。”但不管观点有怎样的分歧，他们两位都很担心，万一屈映光能召到更多人参与他的邪恶阴谋的话，事情就糟了，因此必须迅速采取行动，尤其是不能让吴佩孚大帅坐实靳云鹗不忠的事实。"
+ shandong.3.d:0 "济南的晨光洒在床头檀木柜之上，一旁的美人依然在梦中回忆着昨夜的云雨放浪，但此时，山东的督理靳云鹗将军，却在门外看到了一个神秘的访客。小朋友们，我们的故事就从这里开始了。将军眉头一皱，立即察觉到了危险的气氛。他对他的妻子们和守卫们说，“快，你们快躲起来，我来对付这个人”，随后成功地抓住了那个入侵者。接下来，将军让高汝桐去和这个神秘人对话，虽然神秘人极其狡猾，编出了一个又一个的谎言试图迷惑高将军，但最终还是一一被高将军看穿了。在高将军锐利的目光面前，他不得不承认，他其实是大坏蛋屈映光派来的人。不止如此，高将军还在这个人身上搜到了危险的武器，大吃一惊的他赶紧向靳大将军说到，“靳大人，我们应该立刻派人去屈映光的老巢调查一番，看看这家伙的老窝能不能撑住烈火的攻击”。但另一位从遥远日出之国赶来协助靳大将军的伊达顺之助将军却不这么认为，他用不太标准的中文说到，“屈映光的，大大的狡猾的干活。他的，应该已经知道自己的阴谋败露了的干活，所以我们的，去铁路阻止他们的干活。”但不管观点有怎样的分歧，他们两位都很担心，万一屈映光能召到更多人参与他的邪恶阴谋的话，事情就糟了，因此必须迅速采取行动，尤其是不能让吴佩孚大帅坐实靳云鹗不忠的事实。"
  shandong.3.a:0 "叫人去封路！"
  shandong.3.b:0 "叫人去抄家！"
  shandong.971.t:0 "伊达顺之助在德州袭击了屈映光"
@@ -1123,9 +1125,9 @@
  sqiwan.6.d:0 "在张宗昌时期，由于其本人带头贪腐，山东政界烂得无法想象。而靳云鹗平素最恨人贪污，看见部下有舞弊情形极为痛恨，动骂道：“狗日的，就知道发财。”尽管1928年后靳云鹗试图惩处相关人士，但是在没有资金支持和张宗昌派余温未散的情况下也无法更进一步，只能隔靴搔痒。但现在就不一样了，张宗昌死了，老对头屈映光也死了。靳云鹗在山东独揽大权，终于可以清理手底下这帮不拿钱就不办事的官僚们了。这些出身自孔孟之乡，多多少少读过儒经，还是不知廉耻的天天贪污腐败的官僚需要交出自己的腐败资产，然后挨上一颗子弹。"
  sqiwan.6.a:0 "要不还是砍头吧？"
  sqiwan.7.t:0 "南京来信"
- sqiwan.7.d:0 "最近的局势真可谓是风云突变，南方的孙传芳死在了刺客暗杀之下，随后在福建割据许久的国民党也按捺不住掀起了战乱，和齐燮元、陈调元等人打得不可开交。山东那边我们的盟友张宗昌死在了叛乱无果的乱兵中，靳云鹗那家伙不仅稳住了局势还一路南下打进了南京城，这还没完，他们居然请回了在上海赋闲的段祺瑞重组了安国军。现在段祺瑞那老家伙还给我们发来了电报，他先说当年大家在袁大帅手下时是如何如何的友好，又聊了聊之后大家伙的分歧，说都过去了，他也不纠结了。最后才图穷匕见的指责了吴佩孚那家伙怎么怎么样，避过曹锟不谈。说他现在和手底下戮力同心，要在发挥最后的余温什么什么的，反正就是要和吴佩孚开战。希望我们配合他们，尽管我们入关是必然的，但是段祺瑞这样的人怎么能和我们并列呢？"
+ sqiwan.7.d:0 "最近的局势真可谓是风云突变，南方的孙传芳死在了刺客暗杀之下，随后在福建割据许久的国民党也按捺不住掀起了战乱，和齐燮元、陈调元等人打得不可开交。山东那边我们的盟友张宗昌死在了叛乱无果的乱兵中，靳云鹗那家伙不仅稳住了局势还一路南下打进了南京城，这还没完，他们居然请回了在上海赋闲的段祺瑞重组了安国军。现在段祺瑞那老家伙还给我们发来了电报，他先说当年大家在袁大帅手下时是如何如何的友好，又聊了聊之后大家伙的分歧，说都过去了，他也不纠结了。最后才图穷匕见的指责了吴佩孚那家伙怎么怎么样，避过曹锟不谈。说他现在和手底下戮力同心，要再发挥最后的余力什么什么的，反正就是要和吴佩孚开战。希望我们配合他们，尽管我们入关是必然的，但是段祺瑞这样的人怎么能和我们并列呢？"
  sqiwan.7.a:0 "他们在幻想什么？"
- sqiwan.7.b:0 "帮帮他们吧"
+ sqiwan.7.b:0 "还是帮帮他们吧"
  sqiwan.8.t:0 "德国人拒绝了我们"
  sqiwan.8.d:0 "又一次，德国人拒绝了我们的请求，如同他们最初霸占青岛那般强盗。又一次的失败使得国内群情激勇，讨伐我们的声音此起彼伏。我们需要想想之后的对策了。"
  sqiwan.8.a:0 "绝不就此罢休"
@@ -1162,7 +1164,7 @@
  sqiwan.17.d:0 "五峰山洞真观位于长清县五峰山乡五峰仙庄。它在战国时期为石卯石阔。据熙年间的《长清县志》云：“与泰岱、灵岩并称三山。"它居于迎仙峰(一名聚仙峰)、望仙峰、会仙峰、志仙峰、群仙峰五峰环抱之中。其古柏苍松，重崖叠，奇石磷峋，历来被视为道家之圣地。清道光年间，礼部观政李雨结朝山时曾叹赞：“五峰其形若仙人壁立，其势若碧鸾飞舞；且茂林郁葱，漩水瀑布；而远迩士女威不惮于里面来观瞻者，盖数千年于斯矣。”始皇二十八年(公元前219年)东封泰山祭地后北行路经古石宛邑(今石窝村)，宰相李斯于石间(今五峰仙庄)立一小篆碑。汉太初二年(公元前103年)，武帝东封泰山后，也来此作封禅篆碑一机。足以证明，五峰山已在泰汉时期就为名山。\n\n道观旧址占地2000多亩，殿堂阁及耳房百余间。整个部局分为南北两观。南观为玄都观，包括一天门、迎恩阁、灵官殿、德王府大厅及王陵墓等。北观自南向北包括：迎风壁、木坊门、十三太保(13 株古柏)、迎仙桥。之北为洞真观，洞真观为魏太和年间道士邱志园所建，金朝贞祐初年救建重修后正式定名洞真观(一名神虚宫，一名大庵)。它包括:三清殿(左右碑碣十余桷)、龙神殿、玉皇殿(为金兴定初年羽士王志深自栖霞来此创修)。其左为龙王殿，其右为虎神殿(内有五音石)、千年白果树、清冷亭(一名志仙亭)、碧霞宫、真武殿、隆寿宫大石阙(一名大石坊)，九十一级青石台阶，大月台(一名大戏台，每年农历四月初八日和十月十五日各举行连续3天的香火大会)、护国隆寿宫(一名隆素宫，为明万历年间救建)、更鸡桥其左右龙碑及功德碑 30余桷，最后为三元大殿。之西小山头为青帝宫、之西北为九莲殿(系明神宗为其母李太后建造)，及其伏魔宫。\n\n道观在明末清初为匪寇剿平，而归县管辖。后来又多修缮1913年农商部在此设立林业实验场，1920年国民党军与晋军在此交战，道观损失严重，使之荒凉，后又重修多次。到此观光旅游避暑，均不失世外桃园之风蕴，五峰仙庄自古以来有八大景观，它们是，青崖积翠、明泉早照、凤山烟雨、滚粟朝霞、鱼台钓月、杏堤春晓、薛岭牧润玉七峰。"
  sqiwan.17.a:0 "度假胜地"
  sqiwan.18.t:0 "靳徐之间"
- sqiwan.18.d:0 "皖系从来都不是一个密切的同盟，同盟内部的互相攻伐更是随处可见。哪怕是段祺瑞的四大金刚也是如此，1920年皖系覆灭之前，靳云鹏与徐树铮的关系就已经降到了冰点，徐树铮虽有才能但是为人飞扬跋扈。哪怕是靳云鹏当上了总理，安福系不仅不支持反而在徐树铮的指示下不断发起阁潮要推翻靳云鹏，最终靳云鹏无奈辞职，政局动荡，点燃了直皖战争的火焰，徐树铮又企图刺杀张作霖将奉系也推向倒皖的一方。而在那场战争中靳云鹏同样是点火人，他里应外合，将皖系推入了覆灭的深坑。如今他的弟弟靳云鹗为了击败吴佩孚，再造皖系。这些从前的皖系老人，朋友，仇人们相聚在一起。彼此沉默无语，这是数十年来头一遭大家重新坐在同一张桌子前，如靳云鹏一般的窝在天津当寓公，如曲同丰一般的投降直系“流放”山东。这是一场无言的会议，最终彼此也没有任何交谈会议就结束了。毕竟他们也不过是靳云鹗亲来的傀儡，手上既无兵，又无权，又有什么好交流的呢？数十年时光彼此的仇恨也早已将消磨殆尽了，相见更是无言。"
+ sqiwan.18.d:0 "皖系从来都不是一个密切的同盟，同盟内部的互相攻伐更是随处可见。哪怕是段祺瑞的四大金刚也是如此，1920年皖系覆灭之前，靳云鹏与徐树铮的关系就已经降到了冰点，徐树铮虽有才能但是为人飞扬跋扈。哪怕是靳云鹏当上了总理，安福系不仅不支持反而在徐树铮的指示下不断发起阁潮要推翻靳云鹏，他认为只要他才有担任国务院总理的才能。而靳云鹏和段祺瑞又何谈亲密无间呢？当上了总理便不愿意再受到段祺瑞的控制。最终靳徐之间闹得不可开交，导致靳云鹏被迫辞职，政局动荡，点燃了直皖战争的火焰，徐树铮又企图刺杀张作霖将奉系也推向倒皖的一方。\n\n而在那场战争中靳云鹏同样是点火人，他里应外合，将皖系推入了覆灭的深坑。如今他的弟弟靳云鹗为了击败吴佩孚，再造皖系。这些从前的皖系老人，朋友，仇人们相聚在一起。彼此沉默无语，这是数十年来头一遭大家重新坐在同一张桌子前，如靳云鹏一般的窝在天津当寓公，如曲同丰一般的投降直系“流放”山东。这是一场无言的会议，最终彼此也没有任何交谈会议就结束了。毕竟他们也不过是靳云鹗亲来的傀儡，手上既无兵，又无权，又有什么好交流的呢？数十年时光彼此的仇恨也早已将消磨殆尽了，相见更是无言。"
  sqiwan.18.a:0 "哪儿来的仇，哪儿来的怨呢？"
  sqiwan.19.t:0 "段祺瑞的葬礼"
  sqiwan.19.d:0 "一则悲伤的消息从北京弥漫开来，随后席卷了全国大街小巷。昨日刚刚向全国人民发表演讲的大总统、独夫民贼、四造共和元勋、无数卖国条约签订者、争议缠身但又是如今无可置疑的民国英雄段祺瑞元帅在睡梦中与世长辞。他数年前就重病缠身早应离世，但为了那个宏大的目标，为了全体国民，他一直挺到了现在，他已经完成了他的夙愿，在世间再无任何留念的他并没有要求任何人陪伴在他的身边进行临终关怀，也因此没有留下任何遗言就这样悄然离开了我们。\n\n我国政府已计划为其举行国葬，在我们的国歌《卿云歌》的歌声中，我国的全体政治与军事人物都将出席葬礼，同时临时总统靳云鹗也宣布，届时全国降半旗哀悼半小时，随后举行为期一周的全国哀悼。对于许多人而言，也许如此那个军阀割据，波谲云诡的时代才真正的结束了。"
