--- a/localisation/KR_Shandong_l_simp_chinese.yml
+++ b/localisation/KR_Shandong_l_simp_chinese.yml
@@ -476,7 +476,7 @@
  SQI_Recruiting_Red_Spears_And_Big_Swords:0 "吸纳皈一道"
  SQI_Recruiting_Red_Spears_And_Big_Swords_desc:0 "皈一道有着将我们的救赎事业与中国之外的救赎思想相结合的创新能力，不过很遗憾，他们离开山东，跑到北京和天津去了，不过这也没啥，他们的常驻地点是皈一道主管们搞慈善的主要场所。"
  SQI_Song_Zheyuan:0 "仁义礼智信"
- SQI_Song_Zheyuan_desc:0 "军阀们对山东的破坏显而易见：鸦片和腐败横行，渗透到社会的每个角落，而政府官员不过是这些大土匪手下的小土匪强盗。现在屈映光已经重掌山东大权，依靠手下的研究会和中央政府的资金帮助，他会让山东摆脱苦难，重建这里的秩序。"
+ SQI_Song_Zheyuan_desc:0 "军阀们对山东的破坏显而易见：鸦片和腐败横行，渗透到社会的每个角落，而政府官员不过是这些大土匪手下的小土匪强盗。现在屈映光已经重掌山东大权，依靠手下的归仁会和中央政府的资金帮助，他会让山东摆脱苦难，重建这里的秩序。"
  SQI_Preparing_Integration_With_The_Qing:0 "寻根"
  SQI_Preparing_Integration_With_The_Qing_desc:0 "二张已除，山东重回北京当局的怀抱之中，不仅山东的文化遗产能得到保护，而且我们心中酝酿的消灭列强影响的梦想也已近在咫尺。"
  SQI_Advertising_Shandong_As_A_Model_Province_In_Beijing:0 "山东是个模范省"
@@ -716,10 +716,10 @@
  shandong.3.a:0 "叫人去封路！"
  shandong.3.b:0 "叫人去抄家！"
  shandong.971.t:0 "伊达顺之助在德州袭击了屈映光"
- shandong.971.d:0 "伊达顺之助驻防德州后受到了比平时还要严重的抵抗，毫无疑问，这儿已经是屈映光和研究会的地盘了。伊达顺之助来德州之后就开始搜捕屈映光，最终，在与研究会士兵的一阵冲突之后，于海岛金山寺祭祖的屈映光被抓了，好在伊达顺之助干掉了民兵和屈映光本人，不过这也意味着我们需要更大的努力来人德州人闭嘴。战斗结束后，海岛金山寺已是火光冲天，而伊达本人则试图为自己找一个不在场证明。"
+ shandong.971.d:0 "伊达顺之助驻防德州后受到了比平时还要严重的抵抗，毫无疑问，这儿已经是屈映光和归仁会的地盘了。伊达顺之助来德州之后就开始搜捕屈映光，最终，在与归仁会士兵的一阵冲突之后，于海岛金山寺祭祖的屈映光被抓了，好在伊达顺之助干掉了民兵和屈映光本人，不过这也意味着我们需要更大的努力来人德州人闭嘴。战斗结束后，海岛金山寺已是火光冲天，而伊达本人则试图为自己找一个不在场证明。"
  shandong.971.a:0 "这就是个庙，没人在乎的"
  shandong.972.t:0 "陈树藩没在曲阜找着屈映光"
- shandong.972.d:0 "陈树藩那帮人为了一己私欲抛弃了自身所担负的任务，一大批曲阜居民随着屈映光一起跑走了，陈树藩的人没在这座研究会控制的佛寺找到屈映光，靳云鹗最终等来的是陈树藩的道歉和赔礼，不过靳云鹗没消气，他马上让日本骑兵奔赴德州。当然他们在德州也一无所获，靳云鹗不可能派人去骚扰大清把屈映光抓回来，他只能选择回到济南继续监视一贯道的活动。"
+ shandong.972.d:0 "陈树藩那帮人为了一己私欲抛弃了自身所担负的任务，一大批曲阜居民随着屈映光一起跑走了，陈树藩的人没在这座归仁会控制的佛寺找到屈映光，靳云鹗最终等来的是陈树藩的道歉和赔礼，不过靳云鹗没消气，他马上让日本骑兵奔赴德州。当然他们在德州也一无所获，靳云鹗不可能派人去骚扰大清把屈映光抓回来，他只能选择回到济南继续监视一贯道的活动。"
  shandong.972.a:0 "至少我从中得了点好处"
  shandong.4.t:0 "靳云鹗对大清当局申辩"
  shandong.4.d:0 "虽然督理本人没有什么文字功底，但是山东能人如此之多已经足够写一篇完美的应答了。这一托辞旨在回答是什么原因造成了德州最近的恐慌，以及为什么这个问题不应该困扰溥仪或吴佩孚。这封信描绘了一个满是强盗和骗子的省份，信中解释说，这种环境导致山东出现了张天然所引发的道德沦丧和毫无根据的谣言，尤其是张宗昌那家伙一次死性不改，此外信中还提到国民党的威胁及自己对国民党的打击，因此皇帝陛下不能把自己撤职。甚至他还希望陛下能够增加对山东的拨款。"
