--- a/localisation/KR_Qing_l_simp_chinese.yml
+++ b/localisation/KR_Qing_l_simp_chinese.yml
@@ -439,6 +439,10 @@
  QIE_local_logistics_desc:0 "我们已经同西方的那些机动化后勤之类的新奇玩意儿无缘了，毕竟中国的基础设施无法支撑这样的支援装备。采用传统的后勤运输方式确实无法使我们在这方面赢得任何的科技优势，但是要知道骡马可比卡车更能应付崎岖的山路。"
  QIE_german_bailout:0 "德国的援助"
  QIE_german_bailout_desc:0 "在最需要的时候，我们被迫最后一次投向我们的德国“朋友”。德国银行现在接手了我们的巨额贸易债务，将其精心装扮后以“稳健的国债”的名义出售给了对德国毫无戒心的投资户们。虽然财务问题得到了解决，却由此引发了一系列新的政治问题。"
+ QIE_zhili_war_production_idea:0 "德国军工生产援助"
+ QIE_zhili_war_production_idea_desc:0 "直系内部的津保派利用繁荣联盟、北京理事会和德国领事的内部关系，为新生的中国军事生产线赢得了大量投资和现代制造业援助，以帮助国家和军队迅速实现现代化。随着设备的快速更新升级，组建中国装甲旅的方案现已提上日程。直系最高指挥部希望这些新式武器能成为抵御日益迫近的日本侵略与任何野心勃勃军阀的坚实盾牌。"
+ QIE_flurry_of_investment:0 "投资热潮"
+ QIE_flurry_of_investment_desc:0 "在官方宣布放宽贸易限制和投资法律后，中国市场涌现出了大量民族资本家（尽管大部分是外国人）新办的企业。在他们的帮助下，政府克服了严峻的经济形势、稳定了局面。然而，由于对臭名昭彰的外来帝国主义缺少必要的审查，这让内阁出现了不小的摩擦。"
  QIE_diplomatic_genius_idea:0 "新外交使团"
  QIE_diplomatic_genius_idea_desc:0 "顾维钧作为一名优秀的外交策划者，为中华民国组建了全新的外交使团。这些新外交官们将会凭借他们的技能和专门知识帮助我们强化政权的合法性。"
  QIE_pragmatism_idea:0 "实用主义"
@@ -535,6 +539,7 @@
  QIE_anqing_loans_desc:0 "让其他的北方银行提供额外的贷款意味着我们可用的资金将会更少。但是为了增加在新皖系的影响力，这样做应该是值得的。"
  QIE_anqing_reconstruction_aid:0 "安庆的重建援助"
  QIE_anqing_reconstruction_aid_desc:0 "安庆遭受了在八省联合的崩溃时遭到了重创，新皖系统治的地区大部受到了严重破坏。我们已向他们提供支援，并在重建工作中提供其他的帮助。"
+ QIE_AOG_bank:0 "德华银行控股"
  QIE_german_influence_dynamic_modifier:0 "北京理事会的影响等级\n§g北京理事会是德国对北京政府直辖地区实施间接控制的代理人。他们直接资助了一个名为繁荣联盟的游说团体，在采用德国的企业管理方法并大力发展同德国自由贸易的同时，还在议会中占有多个席位。\n\n（此变量与市场自由主义的支持度有关。）§!\n\n每24小时更新一次"
  QIE_yiguandao_influence_dynamic_modifier:0 "一贯道的影响等级\n§g张天然和他的一贯道在我们推翻直系军阀的统治时候提供了帮助。这个神秘的教团现在越来越多得参与到我们的政治生活中。当他们提供有用的好处时，给予他们适当的赏赐可能会使他们在我国的影响力得到遏制。\n\n（此变量与国家民粹主义的支持度有关。）§!\n\n每24小时更新一次"
  QIE_manage_german_influence:0 "管理德国的影响"
@@ -903,6 +908,7 @@
  QIE_buymauser_tt:0 "解锁£decision_icon_small 购买§Y德国轻武器§!的§H决议§!"
  QIE_reorganized_troops_ready:0 "重组的部队将会被部署在洛阳"
  QIE_proclaim_roc:0 "§Y我们将宣称自己才是真正的中华民国§!\n"
+ QIE_import_krupp_steel_effect_tt: "§Y我们将在武汉、洛阳、北京和保定获得民用工厂。根据§m市场自由主义§!支持率，每个城市将获得1座工厂。§!"
  QIE_constitution_TT:0 "§Y在直系军阀的监督下，法学家们将会颁定一套宪法。§!"
  QIE_loose_ends_TT:0 "解锁£decision_icon_small §H决议§!以§Y夺取蒙古§!和§Y西藏§!，前提是还没控制这些地区。\n解锁£decision_icon_small §H决议§!以§Y征服中国其他的未控制地区§!\n解锁£decision_icon_small §H决议§!以§Y整合忠诚的地方政府§!"
  QIE_end_concessions_TT:0 "解锁£decision_icon_small §H决议§!以夺取§Y澳门§!、§Y青岛§!和§Y其他的外国租界§!，前提是上述地区仍未受控制。"
