--- a/localisation/KR_Shandong_l_simp_chinese.yml
+++ b/localisation/KR_Shandong_l_simp_chinese.yml
@@ -1191,6 +1191,9 @@
  sqiwan.26.t:0 "我骄傲，我是中国人"
  sqiwan.26.d:0 "在无数蓝色的眼睛和褐色的眼睛之中，我有着一双宝石般的黑色眼睛，我骄傲，我是中国人！\n在无数白色的皮肤和黑色的皮肤之中，我有着大地般黄色的皮肤，我骄傲，我是中国人！\n我是中国人————黄土高原是我挺起的胸脯，黄河流水是我沸腾的热血，长城是我扬起的手臂，泰山是我站立的脚跟。我骄傲，我是中国人！\n我是中国人————我的祖先最早走出森林，我的祖先最早开始耕耘，我是指南针、印刷术的后裔，我是圆周率、地动仪的子孙。在我的民族中，不光有史册上万古不朽的孔夫子、司马迁、李自成、孙中山，还有那文学史上万古不朽的花木兰、林黛玉、孙悟空、鲁智深。我骄傲，我是中国人！\n我是中国人！"
  sqiwan.26.a:0 "我是中国人！"
+ sqiwan.27.t:0 "段祺瑞的十年"
+ sqiwan.27.d:0 "1926年段祺瑞下野之后边和其他皖系旧人一样窝居天津，期间德国人认为他的影响力犹存，还有一定的价值想要让他再入政坛与吴佩孚抗衡。而吴佩孚也认为段祺瑞虽然下野了，但是余威犹存，担心他还在暗中积蓄力量，见到德国人有意请他出山，更对他充满了敌意。多次派人暗示他北方气候不好，自己愿意出一笔钱让他前往南方修养。段祺瑞不堪其扰，最终在1933年，在侄子段宏纲、小舅吴光新和旧部魏宗翰的陪同下一路南行，此后便留在上海居住直到如今。自从下野以来，段祺瑞就像是失去了精气神，整日萎靡不振，加之戎马一生，饮食极不健康，长期患有胃病。下野后更是只吃素饭，肉食、滋补物一点不用，还喜好抽烟。1934年春末，胃病转溃疡引发大出血，而他年岁已高不便动手术，如不是家人多次输血，险些去世。中西医诊后都劝他开荤，增加营养，段祺瑞起初坚决不接受，说人可死荤不可开。直到山东的靳云鹗听说段帅大病一事，传来密信，段祺瑞阅读后大笑一场，当晚便开了荤，身体这才有了好转，虽说仍旧小病不断，但此后未曾听闻有过重病不起的时候。"
+ sqiwan.27.a:0 "信里到底写了什么？"
 
 #白俄
  SQI_SHA: "山东政府"
